@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="loginRootPane" prefHeight="400.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
+<AnchorPane fx:id="loginRootPane" prefHeight="400.0" prefWidth="990.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <children>
       <TextField fx:id="txtUserName" layoutX="379.0" layoutY="115.0" promptText="UserName">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button layoutX="461.0" layoutY="275.0" mnemonicParsing="false" onAction="#Login" text="Login">
+      <Button layoutX="379.0" layoutY="275.0" mnemonicParsing="false" onAction="#Login" text="Login">
          <font>
             <Font size="18.0" />
          </font>
@@ -29,5 +29,10 @@
             <Font size="27.0" />
          </font>
       </Label>
+      <Button layoutX="524.0" layoutY="275.0" mnemonicParsing="false" onAction="#signup" prefHeight="33.0" prefWidth="91.0" text="SignUp">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
