@@ -2,13 +2,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="412.0" prefWidth="1002.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane fx:id="signupRootPane" prefHeight="412.0" prefWidth="1002.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label fx:id="lblStatus1" alignment="CENTER" contentDisplay="CENTER" layoutX="13.0" layoutY="58.0" prefHeight="21.0" prefWidth="990.0" text="Status" textFill="#483fe4">
+      <Label fx:id="lblStatus" alignment="CENTER" contentDisplay="CENTER" layoutX="13.0" layoutY="58.0" prefHeight="21.0" prefWidth="990.0" text="Status" textFill="#483fe4">
          <font>
             <Font size="27.0" />
          </font>
@@ -18,25 +19,25 @@
             <Font size="18.0" />
          </font>
       </TextField>
-      <Button fx:id="Sign_up" layoutX="441.0" layoutY="307.0" mnemonicParsing="false" onAction="#Signup" prefHeight="34.0" prefWidth="94.0" text="Sign Up">
+      <Button layoutX="441.0" layoutY="307.0" mnemonicParsing="false" onAction="#Signup" prefHeight="34.0" prefWidth="94.0" text="Sign Up">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <TextField fx:id="txtUserName1" layoutX="380.0" layoutY="168.0" prefHeight="0.0" prefWidth="236.0" promptText="Password">
+      <TextField fx:id="phoneno" layoutX="381.0" layoutY="211.0" prefHeight="33.0" prefWidth="236.0" promptText="Phone No.">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtUserName11" layoutX="381.0" layoutY="211.0" prefHeight="33.0" prefWidth="236.0" promptText="Phone No.">
+      <TextField fx:id="email" layoutX="380.0" layoutY="254.0" prefHeight="33.0" prefWidth="236.0" promptText="Email">
          <font>
             <Font size="18.0" />
          </font>
       </TextField>
-      <TextField fx:id="txtUserName111" layoutX="380.0" layoutY="254.0" prefHeight="33.0" prefWidth="236.0" promptText="Email">
+      <PasswordField fx:id="txtPassword" layoutX="380.0" layoutY="168.0" prefHeight="33.0" prefWidth="236.0" promptText="Password">
          <font>
             <Font size="18.0" />
          </font>
-      </TextField>
+      </PasswordField>
    </children>
 </AnchorPane>
